fix spacing issue welcome page

--- a/public/main.css
+++ b/public/main.css
@@ -111,7 +111,9 @@ margin-top: 0;
 }
 
 /*****************border end**************************/
-
+.tipping{
+  height: 2.5rem;
+}
 
 /*************************index.ejs******************************/
 .grid{
